# codeparty

./: .dir-locals.el  .gitignore  codeparty.cabal  psc-package.json  stack.yaml
app/: Main.hs  build-ps.hs  codeparty.hs
scripts/: deploy.sh
src/: CodeParty.hs  Location.js  Location.purs  Main.purs  SessionStorage.js  SessionStorage.purs  Tinyghc.hs  UUID.js  UUID.purs  Visibility.js  Visibility.purs
src/CodeParty/: Foundation.hs  Model.hs  Session.purs  Types.hs  Types.purs
src/CodeParty/Components/: Editor.purs  Party.purs  Viewer.purs
src/Halogen/: CodeMirror.js  CodeMirror.purs  Websocket.js  Websocket.purs
static/: index.css  zenburn.css
